[gd_scene load_steps=3 format=3 uid="uid://dncx4kqpb3dga"]

[ext_resource type="Script" path="res://src/demo/background-demo-custom-tab.gd" id="1_vyxk3"]
[ext_resource type="PackedScene" uid="uid://8md7tymitc3w" path="res://src/demo/BackgroundDemoPickerRow.tscn" id="2_vw3mi"]

[node name="Custom" type="MarginContainer"]
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_vyxk3")
PickerRowScene = ExtResource("2_vw3mi")

[node name="PickerContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextEdit" type="TextEdit" parent="PickerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "[\"ffffff\", \"eeeeee\"]"
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PickerContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="PickerContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "+"

[node name="RemoveButton" type="Button" parent="PickerContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "-"

[node name="HSeparator" type="HSeparator" parent="PickerContainer"]
layout_mode = 2

[node name="PickerRow" parent="PickerContainer" instance=ExtResource("2_vw3mi")]
layout_mode = 2

[connection signal="text_changed" from="PickerContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="PickerContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="PickerContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
